@@ -18,6 +18,7 @@ acct_mgr-0.5 (not yet released) - branch 0.11
  * #10739: Move 'Back to Accounts' button to the contextual navigation
  * #10741: Provide email verification status indicator on user admin panel
  * #10742: Rename "Update" button to "Refresh" on Review Account Details page
+ * #10745: Add 'Select all' checkbox to header of list in user admin panel
  * add unit tests for db access functions
  * add account guard configuration to config admin panel
  * allow logging-in into password-less accounts via acct_mgr.LoginModule
